# cmake_pyarrow

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build_arrow.sh  find_pyarrow.py
Source/MyLib/: CMakeLists.txt
Source/MyLib/include/MyLib/: library.h
Source/MyLib/src/: library.cpp
cmake/: FindPyArrow.cmake
examples/: example.py
python/: CMakeLists.txt  setup.py
python/package/: CMakeLists.txt  getwheelname.py  setup.py
python/src/cpp/: bindings.cpp  pyarrow_casters.hpp
python/src/pymylib/: __init__.py  my_library.py  py_arrow_converter.py
